# boldui

./: .gitignore  Cargo.toml  LICENSE  MIT_LICENSE  README.md  example_framework_counter.py  example_framework_counter_client-side.py  example_framework_flex.py  example_framework_form.py  example_framework_listview.py  example_framework_store_counter.py  example_framework_widget_factory.py  example_raw_stress.py  example_raw_text.py  example_raw_with_clicks.py  example_rawframework_various.py
boldui/: __init__.py  adwaita.py  app.py  framework.py  hotrefresh.py  store.py
boldui_protocol/: Cargo.toml  spec.md
boldui_protocol/src/: lib.rs
boldui_protocol_bindings/: Cargo.toml  template.bt
boldui_protocol_bindings/csharp/_boldui_protocol/: A2RExtendedHelloResponse.cs  A2RHelloResponse.cs  A2RMessage.cs  A2RReparentScene.cs  A2RUpdate.cs  A2RUpdateScene.cs  A2RUpdateVar.cs  CmdsCommand.cs  Color.cs  EA2RExtendedHelloResponse.cs  EA2RHelloResponse.cs  EA2RMessage.cs  Error.cs  EventHandler.cs  EventType.cs  ExternalAppRequest.cs  HandlerBlock.cs  HandlerCmd.cs  OpAdd.cs  OpId.cs  OpsOperation.cs  R2AError.cs  R2AExtendedHello.cs  R2AHello.cs  R2AMessage.cs  R2AOpen.cs  R2AReply.cs  R2AUpdate.cs  R2EAExtendedHello.cs  R2EAHello.cs  R2EAMessage.cs  R2EAOpen.cs  R2EAUpdate.cs  ResourceChunk.cs  ResourceDealloc.cs  SceneAttr.cs  TraitHelpers.cs  Value.cs  VarId.cs  Watch.cs
boldui_protocol_bindings/python/: setup.cfg
boldui_protocol_bindings/python/bincode/: __init__.py
boldui_protocol_bindings/python/boldui_protocol/: __init__.py  _boldui_protocol.py
boldui_protocol_bindings/src/: main.rs
boldui_protocol_bindings/typescript/: boldui_protocol.ts  package.json  tsconfig.json
boldui_protocol_bindings/typescript/_boldui_protocol/: _boldui_protocol.ts
boldui_python/: setup.cfg
boldui_python/boldui/: __init__.py  boldui_app.py  external_app.py  scene_mgmt.py  utils.py  widgets.py
boldui_renderer/: Cargo.toml  design.drawio
boldui_renderer/src/: cli.rs  communicator.rs  dmabuf.rs  image_frontend.rs  main.rs  op_interpreter.rs  renderer.rs  simulator.rs  state_machine.rs  util.rs  window_frontend.rs
boldui_web/: index.html  package-lock.json  package.json
boldui_web/src/: comm.ts  main.ts  renderer.ts  state_machine.ts  style.css  utils.ts
boldui_wm/: Cargo.toml
boldui_wm/src/: cli.rs  main.rs  server.rs  utils.rs
examples/boldui_example_py_calc/: setup.cfg
examples/boldui_example_py_calc/boldui_example_py_calc/: __main__.py
examples/boldui_example_py_gl/: image.txt  setup.cfg
examples/boldui_example_py_gl/boldui_example_py_gl/: __main__.py
examples/boldui_example_py_gl/boldui_example_py_gl_widget/: __main__.py  opengl_renderer.py  windowed.py
examples/boldui_example_py_widgets/: setup.cfg
examples/boldui_example_py_widgets/boldui_example_py_widgets/: __main2__.py  __main__.py  drag_n_drop.py  resources_subscenes.py
examples/boldui_example_rs_calc/: Cargo.toml
examples/boldui_example_rs_calc/src/: main.rs
examples/boldui_example_shapes/: Cargo.toml  input.json  input.yaml
examples/boldui_example_shapes/src/: main.rs  util.rs
uiclient/: main.py  main_loop.py
uiclient-rs/: Cargo.toml
uiclient-rs/src/: main.rs  render.rs  scene.rs  utils.rs
uiserver/: main.py
uiservers/: boldui.py  framework.py  hello_world.py
utils/: visualize_scene_graph.py
utils/bimap_plus_map/: Cargo.toml
utils/bimap_plus_map/src/: lib.rs
utils/serde-generate/: README.md
utils/serde-generate/src/: bt010.rs  generate.rs  lib.rs  python3.rs  typescript.rs
