[workspace]
members = [
    "boldui_protocol",
    "boldui_protocol_bindings",
    "boldui_renderer",
    "utils/bimap_plus_map",
    "examples/boldui_example_rs_calc",
]

[profile.dev]
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-small]
inherits = "release"
lto = true
opt-level = 'z'

[patch.crates-io]
serde-generate = { git = "https://github.com/Wazzaps/serde-reflection-010bt.git" }
serde-reflection = { git = "https://github.com/Wazzaps/serde-reflection-010bt.git" }
