[workspace]
members = [
    "boldui_protocol",
    "boldui_protocol_bindings",
    "boldui_renderer",
    "utils/bimap_plus_map",
    "utils/serde-generate",
    "utils/serde-name",
    "utils/serde-reflection",
    "examples/boldui_example_rs_calc",
]
default-members = ["boldui_renderer"]

[profile.dev]
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-small]
inherits = "release"
lto = true
opt-level = 'z'
