[workspace]
members = [
    "boldui_protocol",
    "boldui_protocol_bindings",
    "boldui_renderer",
    "boldui_wm",
    "utils/bimap_plus_map",
    "utils/serde-generate",
    "utils/serde-name",
    "utils/serde-reflection",
    "examples/boldui_example_rs_calc",
]
default-members = ["boldui_renderer"]

[profile.dev]
incremental = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-small]
inherits = "release"
lto = true
opt-level = 'z'

#[patch.crates-io]
#skia-bindings = { path = "../rust-skia/skia-bindings" }
#serde-generate = { git = "https://github.com/Wazzaps/serde-reflection-010bt.git" }
#serde-reflection = { git = "https://github.com/Wazzaps/serde-reflection-010bt.git" }
