[package]
name = "boldui_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
bincode = "1.3.3"

[features]
default = ["proto_v0_1"]
proto_v0_1 = []
