[package]
name = "boldui_protocol_bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boldui_protocol = { path = "../boldui_protocol" }
serde-reflection = "0.3.6"
serde_yaml = "0.9.14"
serde-generate = "0.24.0"