[package]
name = "boldui_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
boldui_protocol = { path = "../boldui_protocol" }
byteorder = "1.4.3"
parking_lot = "0.12.1"
crossbeam = "0.8.2"

# Graphics
glutin = "0.29.1"
skia-safe = { version = "0.46.0", features = ["wayland"] }
gl = "0.14.0"

# Devtools related
#imgui = "0.8.2"
#imgui-glium-renderer = "0.8.2"
#imgui-winit-support = "0.8.2"
#clipboard = "0.5"
#glium = { version = "0.30", default-features = true }
#image = "0.23"
#winit = { version = "0.27.3", features = ["wayland-csd-adwaita"] }
