[package]
name = "boldui_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
boldui_protocol = { path = "../boldui_protocol" }
byteorder = "1.4.3"
parking_lot = "0.12.1"
crossbeam = "0.8.2"
nix = "0.25.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9.14"
eventfd = "0.2.0"
bimap_plus_map = { path="../utils/bimap_plus_map" }

# Graphics
gtk = {package = "gtk4", version = "0.6.2", features = ["v4_6"]}
adw = {package = "libadwaita", version = "0.3.1", features = ["v1_1"]}
glib = "0.17.2"
skia-safe = { version = "0.46.0", features = ["wayland"] }
gl = "0.14.0"
epoxy = "0.1.0"
libloading = "0.7.4"

# Devtools related
#imgui = "0.8.2"
#imgui-glium-renderer = "0.8.2"
#imgui-winit-support = "0.8.2"
#clipboard = "0.5"
#glium = { version = "0.30", default-features = true }
#image = "0.23"
#winit = { version = "0.27.3", features = ["wayland-csd-adwaita"] }
