[package]
name = "boldui_wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
tokio-seqpacket = "0.7.0"
argh = "0.1.10"
boldui_protocol = { path = "../boldui_protocol" }
anyhow = "1.0.71"

tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-journald = "0.3.0"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
