[package]
name = "uiclient"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.28.0"
skia-safe = { version = "0.46.0", features = ["wayland"] }
gl = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
