[package]
name = "boldui_example_shapes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
bincode = "1.3.3"
boldui_protocol = { path = "../../boldui_protocol" }
byteorder = "1.4.3"
querystring = "1.1.0"
uriparse = "0.6.4"
serde = { version = "1.0.144", features = ["derive"] }
